@@ -1,6 +1,11 @@
 package jmri.jmrit.logixng.actions;
 
-import jmri.jmrit.logixng.NamedBeanType;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
+import static jmri.configurexml.StoreAndCompare.checkFile;
 
 import java.io.*;
 import java.net.*;
@@ -12,7 +17,6 @@ import javax.net.ssl.HttpsURLConnection;
 import jmri.*;
 import jmri.configurexml.LoadAndStorePreferences;
 import jmri.configurexml.ShutdownPreferences;
-import static jmri.configurexml.StoreAndCompare.checkFile;
 import jmri.jmrit.logixng.*;
 import jmri.jmrit.logixng.expressions.ExpressionTurnout;
 import jmri.jmrit.logixng.expressions.ExpressionLight;
@@ -21,7 +25,9 @@ import jmri.jmrit.logixng.util.LineEnding;
 import jmri.jmrit.logixng.util.parser.ParserException;
 import jmri.util.*;
 
-import org.junit.*;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.jupiter.api.*;
 
 /**
  * Test WebRequest
@@ -44,7 +50,7 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
 
     private static boolean tryAccessJmriOrg() {
         try {
-            URL url = new URL(JMRI_ORG_URL);
+            URL url = new URI(JMRI_ORG_URL).toURL();
             HttpURLConnection con = (HttpsURLConnection) url.openConnection();
             con.setRequestMethod("GET");
             con.setRequestProperty("User-Agent", WebRequest.DEFAULT_USER_AGENT);
@@ -55,10 +61,10 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         } catch (UnknownHostException | java.net.SocketException e) {
             // We couldn't access the web site
             log.warn("Unable to connect to {} {}",JMRI_ORG_URL,e.getMessage());
-            return false;
-        } catch (IOException e) {
-            throw new RuntimeException("Exception thrown", e);
+        } catch (IOException | URISyntaxException e) {
+            fail("Exception thrown", e);
         }
+        return false;
     }
 
     @Override
@@ -162,15 +168,15 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
 
     @Test
     public void testThrowTurnouts() throws JmriException {
-        Assume.assumeTrue("We can access " + JMRI_ORG_URL, WebRequestTest.tryAccessJmriOrg());
+        Assumptions.assumeTrue( WebRequestTest.tryAccessJmriOrg(), "We can access " + JMRI_ORG_URL);
 
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
         Turnout miamiWest = InstanceManager.getDefault(TurnoutManager.class).getByUserName("MiamiWest");
-        Assert.assertNotNull(miamiWest);
+        assertNotNull(miamiWest);
         miamiWest.setState(Turnout.THROWN);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Turnout MiamiWest is thrown", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Turnout MiamiWest is thrown", _replyVariable.getValue());
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Name: turnout, Value: MiamiWest");
@@ -184,10 +190,10 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
         Turnout chicago32 = InstanceManager.getDefault(TurnoutManager.class).getByUserName("Chicago32");
-        Assert.assertNotNull(chicago32);
+        assertNotNull(chicago32);
         chicago32.setState(Turnout.THROWN);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Turnout Chicago32 is thrown", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Turnout Chicago32 is thrown", _replyVariable.getValue());
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Name: turnout, Value: Chicago32");
@@ -202,15 +208,15 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         _replyVariable.setValue(null);
 
         Turnout torontoFirst = InstanceManager.getDefault(TurnoutManager.class).getByUserName("TorontoFirst");
-        Assert.assertNotNull(torontoFirst);
+        assertNotNull(torontoFirst);
         torontoFirst.setState(Turnout.THROWN);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Turnout TorontoFirst is thrown", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Turnout TorontoFirst is thrown", _replyVariable.getValue());
 
         // Suppress instead of assert these messages since they will not be there if the JMRI web server is down
         JUnitAppender.suppressWarnMessageStartsWith("Log local variables:");
         JUnitAppender.suppressWarnMessageStartsWith("Name: turnout, Value: TorontoFirst");
-        JUnitAppender.suppressWarnMessageStartsWith("Name: bean, Value: IT3");
+        JUnitAppender.suppressWarnMessageStartsWith("Name: bean, Value: TorontoFirst");
         JUnitAppender.suppressWarnMessageStartsWith("Global variables:");
         JUnitAppender.suppressWarnMessageStartsWith("Global Name: responseCode, value: 200");
         JUnitAppender.suppressWarnMessageStartsWith("Global Name: reply, value: Turnout TorontoFirst is thrown");
@@ -291,19 +297,19 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
 
     @Test
     public void testCookies() throws JmriException {
-        Assume.assumeTrue("We can access " + JMRI_ORG_URL, WebRequestTest.tryAccessJmriOrg());
+        Assumptions.assumeTrue( WebRequestTest.tryAccessJmriOrg(), "We can access " + JMRI_ORG_URL);
 
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
         _cookiesVariable.setValue(null);
         Sensor green = InstanceManager.getDefault(SensorManager.class).getByUserName("Green");
-        Assert.assertNotNull(green);
+        assertNotNull(green);
         green.setState(Sensor.ACTIVE);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Cookie Green is set. Cookies from client: ", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Cookie Green is set. Cookies from client: ", _replyVariable.getValue());
         String cookies = _cookiesVariable.getValue().toString();
         cookies = cookies.replaceAll("expires=\\w\\w\\w, \\d\\d.\\w\\w\\w.\\d\\d\\d\\d \\d\\d:\\d\\d:\\d\\d", "expires=???, ??-???-???? ??:??:??");
-        Assert.assertEquals("{Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
+        assertEquals("{Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Name: sensor, Value: Green");
@@ -317,13 +323,13 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
         Sensor yellow = InstanceManager.getDefault(SensorManager.class).getByUserName("Yellow");
-        Assert.assertNotNull(yellow);
+        assertNotNull(yellow);
         yellow.setState(Sensor.ACTIVE);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Cookie Yellow is set. Cookies from client: Green=GreenGreen!", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Cookie Yellow is set. Cookies from client: Green=GreenGreen!", _replyVariable.getValue());
         cookies = _cookiesVariable.getValue().toString();
         cookies = cookies.replaceAll("expires=\\w\\w\\w, \\d\\d.\\w\\w\\w.\\d\\d\\d\\d \\d\\d:\\d\\d:\\d\\d", "expires=???, ??-???-???? ??:??:??");
-        Assert.assertEquals("{Yellow=Yellow=YellowYellow%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
+        assertEquals("{Yellow=Yellow=YellowYellow%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Name: sensor, Value: Yellow");
@@ -337,13 +343,13 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
         Sensor blue = InstanceManager.getDefault(SensorManager.class).getByUserName("Blue");
-        Assert.assertNotNull(blue);
+        assertNotNull(blue);
         blue.setState(Sensor.ACTIVE);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Cookie Blue is set. Cookies from client: Yellow=YellowYellow!, Green=GreenGreen!", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Cookie Blue is set. Cookies from client: Yellow=YellowYellow!, Green=GreenGreen!", _replyVariable.getValue());
         cookies = _cookiesVariable.getValue().toString();
         cookies = cookies.replaceAll("expires=\\w\\w\\w, \\d\\d.\\w\\w\\w.\\d\\d\\d\\d \\d\\d:\\d\\d:\\d\\d", "expires=???, ??-???-???? ??:??:??");
-        Assert.assertEquals("{Yellow=Yellow=YellowYellow%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Blue=Blue=BlueBlue%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
+        assertEquals("{Yellow=Yellow=YellowYellow%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Blue=Blue=BlueBlue%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000, Green=Green=GreenGreen%21; expires=???, ??-???-???? ??:??:?? GMT; Max-Age=1296000}", cookies);
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Name: sensor, Value: Blue");
@@ -417,15 +423,15 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
 
     @Test
     public void testPostRequest() throws JmriException {
-        Assume.assumeTrue("We can access " + JMRI_ORG_URL, WebRequestTest.tryAccessJmriOrg());
+        Assumptions.assumeTrue( WebRequestTest.tryAccessJmriOrg(), "We can access " + JMRI_ORG_URL);
         _responseCodeVariable.setValue(null);
         _replyVariable.setValue(null);
 
         Light l = InstanceManager.getDefault(LightManager.class).getByUserName("TestPostRequestLight");
-        Assert.assertNotNull(l);
+        assertNotNull(l);
         l.setState(Light.ON);
-        Assert.assertEquals(200, (int)_responseCodeVariable.getValue());
-        Assert.assertEquals("Logged in. First name: Green, last name: Tomato", _replyVariable.getValue());
+        assertEquals(200, (int)_responseCodeVariable.getValue());
+        assertEquals("Logged in. First name: Green, last name: Tomato", _replyVariable.getValue());
 
         JUnitAppender.assertWarnMessageStartsWith("Log local variables:");
         JUnitAppender.assertWarnMessageStartsWith("Global variables:");
@@ -517,7 +523,7 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
             log.debug(results ? "store was successful" : "store failed");
             if (!results) {
                 log.error("Failed to store panel");
-                throw new RuntimeException("Failed to store panel");
+                fail("Failed to store panel");
             }
 
             // Add the header comment to the xml file
@@ -574,6 +580,7 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
 
     // The minimal setup for log4J
     @Before
+    @BeforeEach
     public void setUp() throws SocketAlreadyConnectedException, ParserException, IOException {
         JUnitUtil.setUp();
         JUnitUtil.resetInstanceManager();
@@ -602,12 +609,13 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
         setupCookiesConditionalNG();
         setupPostRequestConditionalNG();
 
-        if (! _logixNG.setParentForAllChildren(new ArrayList<>())) throw new RuntimeException();
+        assertTrue( _logixNG.setParentForAllChildren(new ArrayList<>()));
         _logixNG.activate();
         _logixNG.setEnabled(true);
     }
 
     @After
+    @AfterEach
     public void tearDown() {
         JUnitUtil.deregisterBlockManagerShutdownTask();
         jmri.jmrit.logixng.util.LogixNG_Thread.stopAllLogixNGThreads();
@@ -615,5 +623,5 @@ public class WebRequestTest extends AbstractDigitalActionTestBase {
     }
 
 
-    private final static org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(WebRequestTest.class);
+    private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(WebRequestTest.class);
 }
